Add Chat support along with History Fetch in WS